--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon",
-    "start": "ts-node -r dotenv/config index.ts"
+    "start": "ts-node -r dotenv/config server.ts | pino-pretty"
   },
   "keywords": [],
   "license": "AGPL-3.0-only",
