--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon",
-    "start": "ts-node -r dotenv/config server.ts | pino-pretty"
+    "start": "ts-node -r dotenv/config index.ts | pino-pretty"
   },
   "keywords": [],
   "license": "AGPL-3.0-only",
   "dependencies": {
     "@grammyjs/types": "^3.20.0",
+    "@openobserve/pino-openobserve": "^0.1.0",
     "@types/lodash": "^4.17.16",
     "dotenv": "^16.4.7",
     "envalid": "^8.0.0",
     "fastify": "^5.2.2",
+    "fastify-plugin": "^5.0.1",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
